[gd_scene load_steps=20 format=3 uid="uid://c3ymq2fphthbm"]

[ext_resource type="Texture2D" uid="uid://ctkq00av6mf1v" path="res://player/Destroyed.png" id="1_lcunu"]
[ext_resource type="Script" path="res://game_over.gd" id="1_puckw"]
[ext_resource type="FontFile" uid="uid://dgba8l3ee6gl6" path="res://Xolonium-Regular.ttf" id="2_2jck2"]

[sub_resource type="AtlasTexture" id="AtlasTexture_p6vub"]
atlas = ExtResource("1_lcunu")
region = Rect2(0, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_natxr"]
atlas = ExtResource("1_lcunu")
region = Rect2(192, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_qlpsi"]
atlas = ExtResource("1_lcunu")
region = Rect2(384, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_jxoup"]
atlas = ExtResource("1_lcunu")
region = Rect2(576, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_5bxrj"]
atlas = ExtResource("1_lcunu")
region = Rect2(768, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_j0y0e"]
atlas = ExtResource("1_lcunu")
region = Rect2(960, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_raw5l"]
atlas = ExtResource("1_lcunu")
region = Rect2(1152, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_nlw7g"]
atlas = ExtResource("1_lcunu")
region = Rect2(1344, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_pnxbh"]
atlas = ExtResource("1_lcunu")
region = Rect2(1536, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_dyven"]
atlas = ExtResource("1_lcunu")
region = Rect2(1728, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_vspo5"]
atlas = ExtResource("1_lcunu")
region = Rect2(1920, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_m6tno"]
atlas = ExtResource("1_lcunu")
region = Rect2(2112, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_6lgyh"]
atlas = ExtResource("1_lcunu")
region = Rect2(2304, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_inqbv"]
atlas = ExtResource("1_lcunu")
region = Rect2(2496, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_as2f7"]
atlas = ExtResource("1_lcunu")
region = Rect2(2688, 0, 192, 192)

[sub_resource type="SpriteFrames" id="SpriteFrames_ox7e4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_p6vub")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_natxr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qlpsi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jxoup")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5bxrj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j0y0e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_raw5l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nlw7g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pnxbh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dyven")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vspo5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m6tno")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6lgyh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_inqbv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_as2f7")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[node name="GameOver" type="CanvasLayer"]
script = ExtResource("1_puckw")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1152.0
offset_bottom = 654.0
color = Color(0.235294, 0.00784314, 0, 1)

[node name="DeathSprite" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(576, 359)
rotation = 4.71239
scale = Vector2(1.5, 1.5)
sprite_frames = SubResource("SpriteFrames_ox7e4")

[node name="Label" type="Label" parent="."]
texture_filter = 1
anchors_preset = -1
anchor_left = 0.0368924
anchor_top = 0.0478395
anchor_right = 0.963108
anchor_bottom = 0.29321
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_2jck2")
theme_override_font_sizes/font_size = 60
text = "Game Over: You Have Been Defeated!"
horizontal_alignment = 1
autowrap_mode = 3
metadata/_edit_use_anchors_ = true

[node name="MainMenuButton" type="Button" parent="."]
texture_filter = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -90.0
offset_top = 223.5
offset_right = 90.0
offset_bottom = 276.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_2jck2")
theme_override_font_sizes/font_size = 30
text = "Menu"

[node name="ScoreLabel" type="Label" parent="."]
offset_left = 454.0
offset_top = 464.0
offset_right = 702.0
offset_bottom = 512.0
theme_override_fonts/font = ExtResource("2_2jck2")
theme_override_font_sizes/font_size = 25
text = "Score:"
horizontal_alignment = 1

[connection signal="pressed" from="MainMenuButton" to="." method="_on_main_menu_button_pressed"]
